--- a/vignettes/wsynvignette_refs.bib
+++ b/vignettes/wsynvignette_refs.bib
@@ -48,11 +48,11 @@ year={1994}}
 
 @article{Schreiber_00,
 author = {Schreiber, T and Schmitz, A},
-title = {{Surrogate time series}},
-Journal = {{Physica D}},
-Year = {{2000}},
-Volume = {{142}},
-Pages = {{346-382}}}
+title = {Surrogate time series},
+Journal = {Physica D},
+Year = {2000},
+Volume = {142},
+Pages = {346-382}}
 
 @article{Sheppard_16,
 author={Sheppard, LW and Bell, J and Harrington, R and Reuman, DC},
