--- a/vignettes/wsynvignette.Rmd
+++ b/vignettes/wsynvignette.Rmd
@@ -883,4 +883,6 @@ much-simplified version of some of the analyses of @Sheppard_18.
 document them, then do some analyses here of those data using all our tools so far.-->
 
 
+# Clustering
+
 # References
