added acknowlegments to vignette

--- a/vignettes/wsynvignette.Rmd
+++ b/vignettes/wsynvignette.Rmd
@@ -885,4 +885,11 @@ document them, then do some analyses here of those data using all our tools so f
 
 # Clustering
 
+# Acknowlegements
+
+This material is based upon work supported by the National Science Foundation 
+under Grant Numbers 17114195 and 1442595. Any opinions, findings, and conclusions 
+or recommendations expressed in this material are those of the author(s) and do 
+not necessarily reflect the views of the National Science Foundation.
+
 # References
